Change internal headers object from MultiValueMap to HttpHeaders
Signed-off-by: Clemens Nafe <clemens.nafe@otto.de>